--- a/src/test/resources/config/data.properties
+++ b/src/test/resources/config/data.properties
@@ -3,18 +3,10 @@
 browser=chrome
 
 #=============Login Test Data===================
-user.email=Admin
-user.password=admin@123
-user.firstName=Admiin
-user.lastName=admin
 
 #===============Website URL=====================
-url=https://www.noon.com/
-saudi.url=https://www.noon.com/saudi-en/
-egypt.url=https://www.noon.com/egypt-en/
-uae.url=https://www.noon.com/uae-en/
+url=https://www.ebay.com/
 
-saudi.currency=SAR
 
 timeout=30
 
