first scenario completed

--- a/src/test/resources/config/data.properties
+++ b/src/test/resources/config/data.properties
@@ -3,9 +3,15 @@
 browser=chrome
 
 #=============Login Test Data===================
+admin.username=Admin
+admin.password=admin123
+
+adduser.employeename=John Smith
+adduser.username=AutomationTest2
+adduser.password=Test@123
 
 #===============Website URL=====================
-url=https://www.ebay.com/
+url=https://opensource-demo.orangehrmlive.com/
 
 
 timeout=30
