Completed user story HRM-1

--- a/src/test/resources/config/data.properties
+++ b/src/test/resources/config/data.properties
@@ -7,7 +7,7 @@ admin.username=Admin
 admin.password=admin123
 
 adduser.employeename=John Smith
-adduser.username=AutomationTest2
+adduser.username=AutomationTest
 adduser.password=Test@123
 
 #===============Website URL=====================
