--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
 					<includes>
 						<include>**/*Runner.java</include>
 					</includes>
+					<testFailureIgnore>true</testFailureIgnore>
 				</configuration>
 			</plugin>
 
